k8s/base/media/hydr0-proxy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/whitelist-source-range: 62.171.160.0/19, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
  labels:
    app.kubernetes.io/instance: hydr0-proxy
    app.kubernetes.io/name: hydr0-proxy
  name: hydr0-proxy
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: hydr0-proxy.kutara.io
      http:
        paths:
          - backend:
              service:
                name: hydr0-proxy
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hydr0-proxy.kutara.io
      secretName: hydr0-proxy-tls
